--- a/WordleClone/Views/GameView.xaml
+++ b/WordleClone/Views/GameView.xaml
@@ -4,9 +4,32 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WordleClone.Views"
+             xmlns:vm="clr-namespace:WordleClone.ViewModels"
+             xmlns:uc="clr-namespace:WordleClone.Views.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <vm:GameViewModel x:Key="vM"/>
+    </UserControl.Resources>
+
     <Grid>
-            
+    <ItemsControl DataContext="{StaticResource vM}" 
+                  ItemsSource="{Binding Guesses}">
+        <ItemsControl.ItemTemplate>
+            <DataTemplate>
+                <uc:GuessItem/>
+            </DataTemplate>
+        </ItemsControl.ItemTemplate>
+    </ItemsControl>
+
+        <StackPanel Orientation="Horizontal">
+            <uc:LetterItem/>
+            <uc:LetterItem/>
+            <uc:LetterItem/>
+            <uc:LetterItem/>
+            <uc:LetterItem/>
+        </StackPanel>
+        
     </Grid>
 </UserControl>
