--- a/WordleClone/Views/Controls/LetterItem.xaml
+++ b/WordleClone/Views/Controls/LetterItem.xaml
@@ -14,17 +14,13 @@
             Width="100"
             Height="100">
         <Grid>
-            <Label Content="{Binding Path=Text, ElementName=letterTB}"
+            <Label Content="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:LetterItem}}, Path=Letter}"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    Foreground="White"
                    FontSize="72"
                    Padding="0"
                    Margin="0 -10 0 0"/>
-            <TextBox x:Name="letterTB"
-                     Visibility="Hidden"
-                     Text="A"
-                     MaxLength="1"/>
         </Grid>
     </Border>
     
